[bugfix] align right drop menu bug

--- a/client/src/components/dropmenu/dropmenu.module.scss
+++ b/client/src/components/dropmenu/dropmenu.module.scss
@@ -3,7 +3,6 @@
 // ============================================
 
 .menu {
-	position: relative;
 	display: inline-flex;
 }
 
