--- a/client/src/components/navbar/navbar.module.scss
+++ b/client/src/components/navbar/navbar.module.scss
@@ -71,6 +71,7 @@
 }
 
 .right {
+	position: relative;
 	display: flex;
 	align-items: center;
 	gap: 0.75rem;
